# hueControllerAssignment

./: CMakeLists.txt  JSONparseTools.cpp  JSONparseTools.h  README.md  dataTypes.h  httpReqTools.cpp  httpReqTools.h  lightsDB_Tools.cpp  lightsDB_Tools.h  main.cpp
